--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "mypkg"
+name = "lyrics-data-analyzer"
 version = "0.0.1"
-description = "Final Project Group Repository for COMPSS-211"
+description = "Final Project Group Four: Navigating Culture Through Music"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = []
