--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "Lyrics-temporal-analysis"
+name = "Lyrics-data-analyzer"
 version = "0.0.1"
 description = "Final Project Group Four Repository for COMPSS-211"
 readme = "README.md"
